--- a/CVX/HW_6/HW6_KailongWang.tex
+++ b/CVX/HW_6/HW6_KailongWang.tex
@@ -22,8 +22,8 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{Formats/Format.tex}
-\input{Formats/Macro.tex}
+\input{../../Formats/Format.tex}
+\input{../../Formats/Macro.tex}
 \allowdisplaybreaks
 
 %%%% Theorem Style %%%%
@@ -43,7 +43,7 @@
 
 \begin{problem}
     {Q1}
-    For each of the following choices of $f:\R\rightarrow \R\cup\set{+\infty}$, compute the convex conjugate function $f^*$:
+    For each of the following choices of $f:\R\rightarrow \R \cup \set{+\infty}$, compute the convex conjugate function $f^*$:
     \begin{enumerate}[(a)]
         \item $f(x)=\frac{1}{2}x^2$.
         \item For $a ,b\in\R$, $a<b$, ${
