--- a/CVX/HW_3/HW3_KailongWang.tex
+++ b/CVX/HW_3/HW3_KailongWang.tex
@@ -22,8 +22,8 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{Formats/Format.tex}
-\input{Formats/Macro.tex}
+\input{../../Formats/Format.tex}
+\input{../../Formats/Macro.tex}
 \allowdisplaybreaks
 
 %%%% Theorem Style %%%%
