--- a/CVX/HW_2/HW2_KailongWang.tex
+++ b/CVX/HW_2/HW2_KailongWang.tex
@@ -181,12 +181,12 @@
 
 \begin{problem}
     {Q4}
-    Suppose $K\subset\R^n$ is a nonempty closed convex cone and $y\notin K$. Using the separating hyperplane theorem, show that there exists a vector $a\in \R^n$ such that $\angles*{a,x}\leq 0$ for all $x\in K$ and $\angles*{a,y}>0$ (this is equivalent to showing that there is a hyperplane separating $y$ from $K$ that passes through the origin).
+    Suppose $K\subset\R^n$ is a nonempty closed convex cone and $y\notin K$. Using the separating hyperplane theorem, show that there exists a vector $a\in \R^n$ such that $\ip*{a,x}\leq 0$ for all $x\in K$ and $\ip*{a,y}>0$ (this is equivalent to showing that there is a hyperplane separating $y$ from $K$ that passes through the origin).
 \end{problem}
 
 \begin{solution}
     {Solution}
-    Since $K$ is a nonempty closed convex cone and $y\notin K$, we have $K\cap\set{y}=\emptyset$. Therefore, by the separating hyperplane theorem, there exists a vector $a\in \R^n$ such that $\angles*{a,x}\leq 0$ for all $x\in K$ and $\angles*{a,y}>0$. This is equivalent to showing that there is a hyperplane separating $y$ from $K$ that passes through the origin. This concludes the proof.
+    Since $K$ is a nonempty closed convex cone and $y\notin K$, we have $K\cap\set{y}=\emptyset$. Therefore, by the separating hyperplane theorem, there exists a vector $a\in \R^n$ such that $\ip*{a,x}\leq 0$ for all $x\in K$ and $\ip*{a,y}>0$. This is equivalent to showing that there is a hyperplane separating $y$ from $K$ that passes through the origin. This concludes the proof.
 \end{solution}
 
 \end{document}
