--- a/CVX/HW_4/HW4_KailongWang.tex
+++ b/CVX/HW_4/HW4_KailongWang.tex
@@ -212,7 +212,7 @@
                     \item Since $F_1$ is only dependent on $z$, its subgradients with respect to $x$ will simply be $0$. With respect to $z$, the subgradients will be the same as the subgradients of $f$ at $z$. Thus, we have $\partial F_1(x,z)=\set{0}\times\partial f(z)$.
                     \item {
                         \begin{itemize}
-                            \item When $z=Ax$: To find the subgradients of $F_2$, we want to find all vectors $(d,w)$ such that: \[F_2(x+h,z+k)\geq F_2(x,z)+\angles{d,h}+\angles{w,k}\] for all $(h,k)$. Given that $F_2(x,z)=0$ for $z=Ax$, the inequality becomes \[F_2(x+h,z+k)\geq \angles{d,h}+\angles{w,k}.\] Considering perturbing $z$ slightly by some $k$ such that $z+k\neq A(x+h)$. In this case $F_2(x+h,z+k)=+\infty$, thus, the inequality holds for all $(d,w)$. Thus, only need to deal with $z+k = A(x+h)$. Now the inequality becomes \[0\geq \angles{d,h}+\angles{w,k}.\] Given $k=A(x+h)-Ax=Ah$, the inequalitycan be written as: \[0\geq \angles{d,h}+\angles{w,Ah}.\] For this to hold for all $h$, $d$ must be orthogonal to $A$ and $w$ must be orthogonal to the nullspace of $A\trn$. Using the hint, we have \[d=A\trn w\] for some $w\in\R^m$. Next for any $h$: \[k=Ah\Rightarrow -k=-Ah.\] Thus $w$ should be the negative of any vector in $\R^m$ to ensure the orthogonality condition. Thus, we have $\partial F_2(x,z)=\set{(A\trn w,-w)\mid w\in\R^m}$.
+                            \item When $z=Ax$: To find the subgradients of $F_2$, we want to find all vectors $(d,w)$ such that: \[F_2(x+h,z+k)\geq F_2(x,z)+\ip{d,h}+\ip{w,k}\] for all $(h,k)$. Given that $F_2(x,z)=0$ for $z=Ax$, the inequality becomes \[F_2(x+h,z+k)\geq \ip{d,h}+\ip{w,k}.\] Considering perturbing $z$ slightly by some $k$ such that $z+k\neq A(x+h)$. In this case $F_2(x+h,z+k)=+\infty$, thus, the inequality holds for all $(d,w)$. Thus, only need to deal with $z+k = A(x+h)$. Now the inequality becomes \[0\geq \ip{d,h}+\ip{w,k}.\] Given $k=A(x+h)-Ax=Ah$, the inequalitycan be written as: \[0\geq \ip{d,h}+\ip{w,Ah}.\] For this to hold for all $h$, $d$ must be orthogonal to $A$ and $w$ must be orthogonal to the nullspace of $A\trn$. Using the hint, we have \[d=A\trn w\] for some $w\in\R^m$. Next for any $h$: \[k=Ah\Rightarrow -k=-Ah.\] Thus $w$ should be the negative of any vector in $\R^m$ to ensure the orthogonality condition. Thus, we have $\partial F_2(x,z)=\set{(A\trn w,-w)\mid w\in\R^m}$.
                             \item When $z\neq Ax$: In this case, $F_2(x,z)=+\infty$. Thus, the subgradients are empty.
                         \end{itemize}
                     }
