--- a/CVX/HW_6/HW6_KailongWang.tex
+++ b/CVX/HW_6/HW6_KailongWang.tex
@@ -70,7 +70,7 @@
             0 & x\in X,\\
             +\infty & \text{otherwise}.
         \end{cases}\]
-        Show that \[\delta_X^*(y)=\sup_{x\in X}\set{\angles*{x, y}},\] and this function is positively homogeneous.
+        Show that \[\delta_X^*(y)=\sup_{x\in X}\set{\ip*{x, y}},\] and this function is positively homogeneous.
         \item Show conversely that, given any positively homogeneous function $f$, its convex conjugate $f^*$ is the indicator function of some closed convex set $C$.
         \item Given a cone $K$, show that $\delta_K^* = \delta_{K^*}$. That is, the conjugate of the indicator function of a $K$ is the indicator function of its polar.
     \end{enumerate}
@@ -107,4 +107,5 @@
     \end{align*}
     in the sense that any solution $y^*$ of the Fenchel dual is equal to $-u^*$ is some optimal solution to the standard dual linear programming problem.
 \end{problem}
+
 \end{document}
