--- a/CVX/HW_5 Midterm/Midterm1_Kailong Wang.tex
+++ b/CVX/HW_5 Midterm/Midterm1_Kailong Wang.tex
@@ -57,11 +57,11 @@
 \begin{solution}
     {Solution}
     \begin{proof}
-        % By definition of Normal Cone, we have \[N_{L(0,h)}(x)=\set{v\mid \angles{v, y-x}\leq 0, \forall y\in L(0,h)}.\]
+        % By definition of Normal Cone, we have \[N_{L(0,h)}(x)=\set{v\mid \ip{v, y-x}\leq 0, \forall y\in L(0,h)}.\]
         We prove the statement by cases.
         \begin{enumerate}
             \item If $h(x)>0$, then $x\notin L(0,h)$, so $N_{L(0,h)}(x)=\emptyset$, which is trivial.
-            \item If $h(x)=0$, $x$ lies on the boundary of $L(0, h)$. The function $h$ being continuously differentiable and convex implies that at $x$, the gradient $\nabla h(x)$ points in a direction that is normal to the level set $L(0, h)$ (since the normal cone is the polar cone of tangent cone of level set at $x$). By convexity, we have \[h(y)\geq h(x)+\angles{\nabla h(x), y-x}, \qquad \forall y\in L(0, h).\] With $h(y)<0$ (definition of level set) and $h(x)=0$ (case assumption), we have \[\angles{\nabla h(x), y-x}<0.\] This means the vector $\nabla h(x)$ is an outward normal to the level set at $x$. Since $h$ does not increase in the direction inside the level set, the normal cone at $x$ consists of all non-negative scalar multiples of $\nabla h(x)$, \ie \[N_{L(0,h)}(x)=\set{\alpha\nabla h(x)\mid \alpha\geq 0}.\]
+            \item If $h(x)=0$, $x$ lies on the boundary of $L(0, h)$. The function $h$ being continuously differentiable and convex implies that at $x$, the gradient $\nabla h(x)$ points in a direction that is normal to the level set $L(0, h)$ (since the normal cone is the polar cone of tangent cone of level set at $x$). By convexity, we have \[h(y)\geq h(x)+\ip{\nabla h(x), y-x}, \qquad \forall y\in L(0, h).\] With $h(y)<0$ (definition of level set) and $h(x)=0$ (case assumption), we have \[\ip{\nabla h(x), y-x}<0.\] This means the vector $\nabla h(x)$ is an outward normal to the level set at $x$. Since $h$ does not increase in the direction inside the level set, the normal cone at $x$ consists of all non-negative scalar multiples of $\nabla h(x)$, \ie \[N_{L(0,h)}(x)=\set{\alpha\nabla h(x)\mid \alpha\geq 0}.\]
             \item If $h(x)<0$, the $x\in\ri L(0, h)$. The normal cone at a point in the relative interior of a convex set is just the zero vector. Because there are directions in every neighborhood around $x$ that stay within $L(0, h)$, and therefore no ``outside'' direction is associated with a decrease from $x$ within level set. Thus, \[N_{L(0,h)}(x)=\set{\bm{0}}.\]
         \end{enumerate}
     \end{proof}
@@ -138,9 +138,9 @@
     Below, suppose $K\subseteq\R^m$ be a nonempty closed convex cone,
     \begin{enumerate}[(a)]
         \item Show that for any $x\in K$, \[F_K(x)=\set{z-\alpha x\mid z\in K, \alpha\geq 0}.\]
-        \item Show that for any $x\in K$, \[N_K(x)=\set{y\in K^*\mid \angles*{x,y}=0}.\]
+        \item Show that for any $x\in K$, \[N_K(x)=\set{y\in K^*\mid \ip*{x,y}=0}.\]
         Hint: you may use the results of homework 3, problem 1(c) and 5(c).
-        \item  $A$ is an $m\times n$ matrix, and $b\in\R^m$, and let $Z=\set{x\in\R^n\mid Ax-b\in K}$. Assume that $Z$ is nonempty. Show that, for $x\in Z$, \[N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\angles{Ax-b,\lambda}=0}.\]
+        \item  $A$ is an $m\times n$ matrix, and $b\in\R^m$, and let $Z=\set{x\in\R^n\mid Ax-b\in K}$. Assume that $Z$ is nonempty. Show that, for $x\in Z$, \[N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\ip{Ax-b,\lambda}=0}.\]
         Hint: you may use the results of homework 3, problem 5.
         \item Show that $\ri Z \supseteq\set{x\in\R^n\mid Ax-b\in\ri K}.$
         \item Let $f:\R^n\rightarrow\R\cup\set{+\infty}$ be a convex function, suppose that the cone $A\trn K^*=\set{A\trn\lambda\mid\lambda\in K^*}$ is closed, and consider the problem{
@@ -156,7 +156,7 @@
         \begin{align*}
             \partial f(x^*)+A\trn\lambda^* &\ni 0 \\
             \lambda^* & \in K^* \\
-            \angles{Ax^*-b,\lambda^*} & =0.
+            \ip{Ax^*-b,\lambda^*} & =0.
         \end{align*}
     \end{enumerate}
 \end{problem}
@@ -177,15 +177,15 @@
             \begin{proof}
                 The proof contains two parts.
                 \begin{enumerate}
-                    \item $N_K(x)\subseteq\set{y\in K^*\mid \angles{x,y}=0}$. Take any $y\in N_K(x)$. By definition of the normal cone, for all $z\in K$ \[\angles{y, z-x}\leq 0.\] Since $K$ is a cone, for $\lambda>0$, $\lambda x$ is also in $K$. Replace $z$  by $\lambda x$ and get \[\angles{y, \lambda x-x}\leq 0,\] which simplifies to \[\lambda\angles{y,x}-\angles{y,x}\leq 0 \Rightarrow (\lambda-1)\angles{y, x}\leq 0.\] Since $\lambda$ is arbitrary, we must have $\angles{y, x}=0$. Besides, $\angles{y,x}\leq 0$ implies $y\in K^*$. Therefore, $N_K(x)\subseteq\set{y\in K^*\mid \angles{x,y}=0}$.
-                    \item $\set{y\in K^*\mid \angles{x,y}=0}\subseteq N_K(x)$. By the definition of $K^*$, we have that for every $y\in K^*$ and for every $z\in K$, \[\angles{y,z}\leq 0.\] And given $\angles{y, x}=0$, we have \[\angles{y, z-x}=\angles{y, z}-\angles{y, x}\leq 0-0 =0,\] which implies $y\in N_K(x)$. Therefore, $\set{y\in K^*\mid \angles{x,y}=0}\subseteq N_K(x)$.
+                    \item $N_K(x)\subseteq\set{y\in K^*\mid \ip{x,y}=0}$. Take any $y\in N_K(x)$. By definition of the normal cone, for all $z\in K$ \[\ip{y, z-x}\leq 0.\] Since $K$ is a cone, for $\lambda>0$, $\lambda x$ is also in $K$. Replace $z$  by $\lambda x$ and get \[\ip{y, \lambda x-x}\leq 0,\] which simplifies to \[\lambda\ip{y,x}-\ip{y,x}\leq 0 \Rightarrow (\lambda-1)\ip{y, x}\leq 0.\] Since $\lambda$ is arbitrary, we must have $\ip{y, x}=0$. Besides, $\ip{y,x}\leq 0$ implies $y\in K^*$. Therefore, $N_K(x)\subseteq\set{y\in K^*\mid \ip{x,y}=0}$.
+                    \item $\set{y\in K^*\mid \ip{x,y}=0}\subseteq N_K(x)$. By the definition of $K^*$, we have that for every $y\in K^*$ and for every $z\in K$, \[\ip{y,z}\leq 0.\] And given $\ip{y, x}=0$, we have \[\ip{y, z-x}=\ip{y, z}-\ip{y, x}\leq 0-0 =0,\] which implies $y\in N_K(x)$. Therefore, $\set{y\in K^*\mid \ip{x,y}=0}\subseteq N_K(x)$.
                 \end{enumerate}
                 The two parts together prove the statement.
             \end{proof}
         }
         \item {
             \begin{proof}
-                For vector $v$ that is in $N_Z(x)$, it must have \[\angles{v, z-x}\leq 0 \qquad \forall z\in Z.\] To use the definition of $Z$, we have \[\angles{v, z-x}=\angles{A\trn v,Az-Ax}=\angles{A\trn v, (Az-b)-(Ax-b)}.\] For $v$ to be in the normal cone $N_Z(x)$, the last inner product should be non-positive for all $Az-b\in K$, which means that $A\trn v$ must be in the normal cone to $K$ at the point $Ax-b$, \ie $A\trn v\in N_K(Ax-b)$. With the previous question, we can related $N_K(Ax-b)$ to $K^*$ by \[N_K(Ax-b)=\set{\lambda\in K^*\mid \angles{Ax-b, \lambda}=0}.\] So, a vector $v\in N_Z(x)$ must correspond to a $\lambda$ in the dual cone $K^*$ such that $A\trn\lambda$ has a zero inner product with $Ax-b$, hence $v=A\trn\lambda$ for some $\lambda$ satisfying $\angles{Ax-b, \lambda}=0$. To account for the fact that the normal cone $N_Z(x)$ is a closed set, we take the closure of the set $\set{A\trn\lambda\mid\lambda\in K^*,\angles{Ax-b,\lambda}=0}$ since the image under a linear transformation of a closed set is not necessarily closed. Therefore, \[N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\angles{Ax-b,\lambda}=0}.\]
+                For vector $v$ that is in $N_Z(x)$, it must have \[\ip{v, z-x}\leq 0 \qquad \forall z\in Z.\] To use the definition of $Z$, we have \[\ip{v, z-x}=\ip{A\trn v,Az-Ax}=\ip{A\trn v, (Az-b)-(Ax-b)}.\] For $v$ to be in the normal cone $N_Z(x)$, the last inner product should be non-positive for all $Az-b\in K$, which means that $A\trn v$ must be in the normal cone to $K$ at the point $Ax-b$, \ie $A\trn v\in N_K(Ax-b)$. With the previous question, we can related $N_K(Ax-b)$ to $K^*$ by \[N_K(Ax-b)=\set{\lambda\in K^*\mid \ip{Ax-b, \lambda}=0}.\] So, a vector $v\in N_Z(x)$ must correspond to a $\lambda$ in the dual cone $K^*$ such that $A\trn\lambda$ has a zero inner product with $Ax-b$, hence $v=A\trn\lambda$ for some $\lambda$ satisfying $\ip{Ax-b, \lambda}=0$. To account for the fact that the normal cone $N_Z(x)$ is a closed set, we take the closure of the set $\set{A\trn\lambda\mid\lambda\in K^*,\ip{Ax-b,\lambda}=0}$ since the image under a linear transformation of a closed set is not necessarily closed. Therefore, \[N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\ip{Ax-b,\lambda}=0}.\]
             \end{proof}
         }
         \item {
@@ -232,7 +232,7 @@
                     \Rightarrow
                     0& \in\partial f(x^*)+A\trn\lambda^* \qquad \text{for some }\lambda^*\in K^*
                 \end{align*}
-                With $A\trn\lambda^*$ is closed (from statement), combining $N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\angles{Ax-b,\lambda}=0}$ from previous result, we finish the proof.
+                With $A\trn\lambda^*$ is closed (from statement), combining $N_Z(x)=\cl\set{A\trn\lambda\mid\lambda\in K^*,\ip{Ax-b,\lambda}=0}$ from previous result, we finish the proof.
             \end{proof}
         }
     \end{enumerate}
